# genpilot

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test.py  test1.py
agent/: __init__.py  agent.py  basic_agent.py  chat.py  chat_agent.py  chat_console.py  console_agent.py  default_agent.py  interface.py  prompt_agent.py  retrieve_agent.py  validate.py
agent/chat/: app.py  common.py  streamlit_chat.py  terminal_chat.py
agent/interface/: agent.py  chat.py
client/: __init__.py  aws_bedrock.py  config.py  groq_client.py  openai_client.py
genpilot/: __init__.py
genpilot/abc/: agent.py  chat.py  memory.py
genpilot/agent/: default_agent.py
genpilot/chat/: __init__.py  chainlit_chat.py  streamlit_chat.py  terminal_chat.py
genpilot/mcp/: agent.py  chat.py  config.py  manager.py  server.py  session.py
genpilot/memory/: __init__.py  buffer_memory.py  buffered_memory.py
genpilot/utils/: mcp_server_config.py
memory/: __init__.py  chat_buffer_memory.py  chat_buffered_memory.py  chat_memory.py  chat_vector_memory.py
prompt/: agent.md  agent.response.md  basic_agent.md  default_agent.md  prompt_agent.md  structured_agent.md
sample/: acm_planer.py  agent_executor.py  agent_tool.py  chat_streamlit_agent.py  chat_terminal_agent.py  default_agent.py  kube_engine.py  kube_engineer.py  multi_agent.py  planer.py  prompt_agent.py  prompt_multi_agent.py  retrieve_agent.py  streamlit_agent.py  structured_output.py  travel_agents.py  vector_memory_agent.py
sample/acm/: advisor.py  engineer.py  planner.py
sample/acmdspy/: engineer.py  planner.py
sample/globalhub/: global_hub_agent.py
samples/: chat_streamlit_agent.py  chat_terminal_agent.py  prompt_agent.py  single_agent.py  structured_output.py  vector_memory_agent.py
tool/: __init__.py  code_executor.py  enum_value.py  kubectl_executor.py  metadata.py  online_tool.py  wikipedia.py
tools/: __init__.py  serper.py
type/: __init__.py  action_permission.py  agent_status_code.py  chat_client.py  chat_message.py
(+31 files in other folders)
