[project]
name = "genpilot"
version = "0.1.0"
description = "GenPilot streamlines the prototype for single/multi-agent systems powered by Generative AI through an intuitive, user-friendly interface."
authors = [{ name = "myan", email = "myan@redhat.com" }]
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
  "rich (>=13.9.4,<14.0.0)",
  "streamlit (>=1.42.2,<2.0.0)",
  "litellm (>=1.61.13,<2.0.0)",
  "textual (>=2.1.1,<3.0.0)",
  "chainlit (>=2.2.1,<3.0.0)",
  "mcp (>=1.3.0,<2.0.0)",
  "commentjson (>=0.9.0,<0.10.0)",
]
keywords = ["agent", "MCP", "chat", "ai", "UI"]
license = "MIT"


[tool.poetry]
packages = [{ include = "genpilot" }]
exclude = ["tests/*", "samples/*"]

[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[project.urls]
repository = "https://github.com/yanmxa/genpilot"
